fix css bug with spacing after more tags and remove no needed files

--- a/src/scss/componentsStyle/TagsFilter.scss
+++ b/src/scss/componentsStyle/TagsFilter.scss
@@ -31,6 +31,6 @@
 
 .more-tags {
   color: map_get($colors, blue-200);
-  margin: 0 0 map_get($spaces, medium);
+  margin-top: 14px;
   width: max-content;
 }
